fixed scrollbars

--- a/style/styles.css
+++ b/style/styles.css
@@ -491,24 +491,6 @@ h1#title {
     margin-top: 20px;
 }    
 
-/*button {
-    background: gray;
-    color: rgba(255, 255, 255, 1); 
-    border-radius: 0.6em;
-    background: -webkit-linear-gradient(top, #373737, #272727);
-    border: 1px solid #1f1f1f;   
-    padding: 0.5em 1em 0.7em 1em;
-    font-weight: bold;
-    font-size: 12px;
-    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.25), inset 1px 1px 0px rgba(255, 255, 255, 0.2);
-    cursor:pointer;
-    text-shadow: black 0px -1px 1px;
-}
-
-button:hover {
-    background: -webkit-linear-gradient(top, #474747, #373737);
-}   */
-
 ul.tabs,
 ul.tabs li{
 	margin:0;
@@ -676,4 +658,48 @@ ul.tabs li.selected{
 }
 
 .loader .label {
+} 
+
+/* Selection ------------------------------------------------------------------------------- */
+
+::selection {
+    background: #e0f0fa;
+    color: #000;
+}
+
+header {
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
+/* Scrollbars ------------------------------------------------------------------------------- */
+
+::-webkit-scrollbar {
+	height: 8px;
+    width: 8px;
+}
+ 
+::-webkit-scrollbar-track {
+	background: rgba(0,0,0,0.1);
+	box-shadow: inset 0 0 6px rgba(0,0,0,0); 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0); 
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+}
+ 
+::-webkit-scrollbar-thumb {
+	border-radius: 4px;
+	-webkit-border-radius: 4px;
+    border: 1px solid rgba(255,255,255,0.15);
+    background: rgba(0,0,0,0.3);
+    box-shadow: inset 0 0 6px rgba(0,0,0,0); 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0); 
+}
+
+::-webkit-scrollbar-thumb:window-inactive {
+    background: rgba(0,0,0,0.1); 
 }
